test/scc/stmt/semantic-errors/046.a
046.t:4:9: error: a continue statement may only be used within a loop